<resources>
    <string name="app_name">AplicacionesPMDM</string>
    <string name="male">hombre</string>
    <string name="female">mujer</string>
    <string name="height">altura</string>
    <string name="weight">peso</string>
    <string name="age">edad</string>
    <string name="result">Resultado</string>
    <string name="recalculate">Recalcular</string>
    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>
    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>


    <string name="boardgames">Juegos de mesa</string>
    <string name="categories">Categorias</string>
    <string name="games">Juegos</string>

    <string name="dialog_add_game">Añade un juego</string>
    <string name="dialog_cooperative_category">Cooperativos</string>
    <string name="dialog_deckbuilding_category">Deckbuilding</string>
    <string name="dialog_euro_category">Euro</string>
    <string name="dialog_lcg_category">LCG</string>
    <string name="dialog_legacy_category">Legacy</string>

    <string name="dialog_newgame_button">Nuevo juego</string>


    <!--APP: ColorPalette-->
    <string name="title_tv_ColorPalette">Paleta de colores</string>
    <string name="btn_color_change">Cambiar color</string>
    <string name="Select_bar">Elige una barra</string>
    <string name="Select_color">Elige un color</string>
    <string name="btn_apply_color">Aplicar color</string>

    <!--Colors to apply on bar--> <!--Used in CuadriculaColores APP-->
    <string name="White">Blanco</string>
    <string name="Red">Rojo</string>
    <string name="Orange">Naranja</string>
    <string name="Yellow">Amarillo</string>
    <string name="Green">Verde</string>
    <string name="Cyan">Cián</string>
    <string name="Blue">Azul</string>
    <string name="Violet">Violeta</string>
    <string name="Grey">Gris</string>
    <string name="Black">Negro</string>


</resources>