<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="580dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:background="#FA69FF"
    android:orientation="vertical"
    android:padding="16dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="30dp"
        >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Select_color"
                android:textColor="@color/white"
                android:textSize="17dp">

            </TextView>
        </TableRow>

        <TableRow>

            <RadioGroup
                android:id="@+id/rgColors_cc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/rdWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:theme="@style/RadioButton_white"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:text="@string/White" />
                <RadioButton
                    android:id="@+id/rdRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:theme="@style/RadioButton_red"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:text="@string/Red" />
                <RadioButton
                    android:id="@+id/rdOrange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:theme="@style/RadioButton_orange"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:text="@string/Orange" />
                <RadioButton
                    android:id="@+id/rdYellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:theme="@style/RadioButton_yellow"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:text="@string/Yellow" />
                <RadioButton
                    android:id="@+id/rdGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:theme="@style/RadioButton_green"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:text="@string/Green" />
                <RadioButton
                    android:id="@+id/rdCyan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:theme="@style/RadioButton_cyan"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:text="@string/Cyan" />
                <RadioButton
                    android:id="@+id/rdBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:theme="@style/RadioButton_blue"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:text="@string/Blue" />
                <RadioButton
                    android:id="@+id/rdViolet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:theme="@style/RadioButton_violet"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:text="@string/Violet" />
                <RadioButton
                    android:id="@+id/rdGrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:theme="@style/RadioButton_grey"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:textAllCaps="true"
                    android:text="Gris" />
                <RadioButton
                    android:id="@+id/rdBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:theme="@style/RadioButton_black"
                    android:textAllCaps="true"
                    android:layout_marginBottom="15dp"
                    android:textSize="15dp"
                    android:text="@string/Black" />

            </RadioGroup>
        </TableRow>
    </TableLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_applyColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="#5B0ACD"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_cvApplyColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/btn_apply_color"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>